Add malware scanner at original URL retrieval in order to protect the user. Also add the /force API to still continue to the original URL
